--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -89,22 +89,19 @@
         <div class="raiting-type">
           <div class="raiting-type_name">Качество услуги</div>
           <div class="raiting-type_numeral">
-            <span class="raiting-type_number">{{ offerData.raiting }}</span>
-            <span class="raiting-type_comments">(1k+ отзывов)</span>
+            <span class="raiting-type_number">{{ offerData.user.qualityMark }}</span>
           </div>
         </div>
         <div class="raiting-type">
           <div class="raiting-type_name">Срок исполнения</div>
           <div class="raiting-type_numeral">
-            <span class="raiting-type_number">{{ offerData.raiting }}</span>
-            <span class="raiting-type_comments">(1k+ отзывов)</span>
+            <span class="raiting-type_number">{{ offerData.user.termMark }}</span>
           </div>
         </div>
         <div class="raiting-type">
           <div class="raiting-type_name">Вежливость фрилансера</div>
           <div class="raiting-type_numeral">
-            <span class="raiting-type_number">{{ offerData.raiting }}</span>
-            <span class="raiting-type_comments">(1k+ отзывов)</span>
+            <span class="raiting-type_number">{{ offerData.user.politenessMark }}</span>
           </div>
         </div>
       </section>
