--- a/src/app/user-page/user-page-comments/user-page-comments.component.scss
+++ b/src/app/user-page/user-page-comments/user-page-comments.component.scss
@@ -157,8 +157,9 @@
     cursor: pointer;
     margin-right: 60px;
     text-decoration: none;
+    outline: none;
     &:hover{
-      text-decoration: underline;
+      color: #5695FD;
     }
   }
   &__date{
