--- a/src/app/user-page/user-page-services/user-page-services.component.scss
+++ b/src/app/user-page/user-page-services/user-page-services.component.scss
@@ -70,8 +70,9 @@
         overflow: hidden;
         margin: 0;
         cursor: pointer;
-        &:hover {
-          text-decoration: underline;
+        outline: none;
+        &:hover{
+          color: #5695FD;
         }
       }
       &__skill {
