--- a/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
+++ b/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
@@ -30,9 +30,6 @@
       position: relative;
       overflow: hidden;
       cursor: pointer;
-      // background-image: url(/assets/images/preview.png);
-      // background-repeat: no-repeat;
-      // background-size: cover;
       img{
         width: 100%;
         height: auto;
@@ -61,24 +58,6 @@
         transform: translate(-50%, -50%);
       }
     }
-    // &__ava {
-    //   height: 40px;
-    //   width: 40px;
-    //   border-radius: 50%;
-    //   overflow: hidden;
-    //   position: relative;
-    //   margin-right: 14px;
-    // }
-    // &__name {
-    //   font-weight: 600;
-    //   font-size: 16px;
-    //   line-height: 20px;
-    //   padding-bottom: 3px;
-    //   &:hover{
-    //     text-decoration: underline;
-    //     cursor: pointer;
-    //   }
-    // }
     &__about{
       font-style: normal;
       font-weight: normal;
@@ -91,7 +70,7 @@
       margin: 0;
       cursor: pointer;
       &:hover{
-        text-transform: underline;
+        color: #5695FD;
       }
     }
     &__skill {
@@ -130,7 +109,6 @@
       line-height: 20px;
       color: #99acb7;
       margin-left: 14px;
-      cursor: pointer;
     }
   }
   &-bottom {
