--- a/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.scss
+++ b/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.scss
@@ -34,6 +34,7 @@
       border-radius: 3px;
       position: relative;
       overflow: hidden;
+      cursor: pointer;
       // background-image: url(/assets/images/preview.png);
       // background-repeat: no-repeat;
       // background-size: cover;
@@ -48,7 +49,7 @@
   }
   &-description {
     width: 100%;
-    padding: 27px 20px;
+    padding: 27px 20px 10px;
     box-sizing: border-box;
     height: 185px;
     display: flex;
@@ -82,14 +83,21 @@
       font-size: 16px;
       line-height: 20px;
       padding-bottom: 3px;
+      color: #323c47;
+      text-decoration: none;
+      cursor: pointer;
       &:hover{
-        text-decoration: underline;
-        cursor: pointer;
+        color: #5695FD;
       }
     }
     &__about{
       max-height: 41px;
       overflow: hidden;
+      color: #323c47;
+      cursor: pointer;
+      &:hover{
+        color: #5695FD;
+      }
     }
     &__skill {
       font-size: 16px;
@@ -130,7 +138,6 @@
       line-height: 20px;
       color: #99acb7;
       margin-left: 14px;
-      cursor: pointer;
     }
   }
   &-bottom {
