--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -151,7 +151,7 @@
     color: #323c47;
     text-decoration: none;
     &:hover{
-      text-decoration: underline;
+      color: #5695FD;
     }
   }
   &-raiting {
