--- a/src/app/dashboard-page/dashboard-pages/finace-page/finace-page.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/finace-page.component.scss
@@ -84,7 +84,7 @@
           background: #f4f7fc;
           border-radius: 4px 4px 0px 0px;
           font-family: Source Sans Pro, sans-serif;
-          padding: 20px;
+          padding: 22px 20px;
           font-style: normal;
           font-weight: 600;
           font-size: 14px;
