--- a/src/app/dashboard-page/dashboard-pages/finace-page/finace-page.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/finace-page.component.html
@@ -30,30 +30,69 @@
       <div class="title">
         история платежей
       </div>
-    <div class="paymenst-list">
-      <div class="title">
-        <span class="name">от кого</span>
-        <span class="date">Дата операции</span>
-        <span class="service">Услуга</span>
-        <span class="cash">Сумма</span>
-      </div>
-      <div class="payment-items">
-        <div class="item" *ngFor="let payment of paymentsList">
-          <div class="name">
-            <div class="ava">
-              <img src="/assets/images/images/ava.jpg" alt="">
+      <div class="paymenst-list">
+        <div class="title">
+          <span class="name">от кого</span>
+          <span class="date">Дата операции</span>
+          <span class="service">Услуга</span>
+          <span class="cash">Сумма</span>
+        </div>
+        <div class="payment-items">
+          <div class="item" *ngFor="let payment of paymentsList">
+            <div class="name">
+              <div class="ava">
+                <img src="/assets/images/images/ava.jpg" alt="">
+              </div>
+              <span> {{ payment.name }}</span>
             </div>
-            <span> {{ payment.name }}</span>
+            <div class="date">{{ payment.date }}</div>
+            <div class="service">{{ payment.service }}</div>
+            <div class="cash"><span>{{ payment.cash }}</span> UAH</div>
           </div>
-          <div class="date">{{ payment.date }}</div>
-          <div class="service">{{ payment.service }}</div>
-          <div class="cash"><span>{{ payment.cash }}</span> UAH</div>
         </div>
       </div>
-    </div>
     </section>
   </div>
   <div class="wallet">
+    <div class="balance">
+      <div class="icon"><img src="/assets/images/icons/finance/current.png" alt=""></div>
+      <div class="data">
+        <p class="value"><span>58 500</span> UAH</p>
+        <p class="title">&#32; состояние счета</p>
+      </div>
+    </div>
+    <div class="wallet-section">
+      <div class="title">ввод и вывод денег</div>
+      <div class="form">
+        <div class="operation-type">
+          <mat-select [(ngModel)]="transactions.transactionType">
+            <mat-option [value]="null" disabled selected >Выберите операцию</mat-option>
+            <mat-option [value]="'input'">
+              Ввести деньги
+            </mat-option>
+            <mat-option [value]="'output'">
+              Вывести деньги
+            </mat-option>
+          </mat-select>
+        </div>
+        <div class="cash-form">
+          <div class="count">
+            <p>напишите сумму</p>
+            <div>
+              <input id="count" type="text"><label for="count"> <span>UAH</span></label>
+            </div>
 
+          </div>
+
+
+          <div class="password">
+            <p>ваш пароль</p>
+            <input type="password">
+          </div>
+          <button class="btn">Подтвердить</button>
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
