--- a/src/app/dashboard-page/dashboard-pages/finace-page/finace-page.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/finace-page.component.html
@@ -90,6 +90,7 @@
             <input type="password">
           </div>
           <button class="btn">Подтвердить</button>
+          <div class="w-p"></div>
         </div>
       </div>
 
