--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -193,7 +193,7 @@
         transform: translateX(-50%);
         padding: 9px 26px 8px;
         white-space: nowrap;
-        width: fit-content;
+        width: auto;
         text-align: center;
         box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
         border-radius: 8px;
