--- a/src/app/user-page/user-page-services/user-page-services.component.scss
+++ b/src/app/user-page/user-page-services/user-page-services.component.scss
@@ -137,6 +137,8 @@
         font-weight: normal;
         font-size: 14px;
         line-height: 18px;
+        display: flex;
+        flex-direction: row;
         span {
           font-weight: bold;
           font-size: 16px;
