--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
@@ -24,6 +24,7 @@ section:not(.wrap) {
   justify-content: flex-start;
   overflow: hidden;
   margin-right: 5px;
+  height: 100%;
 }
 .tabs-wrap {
   width: 100%;
