--- a/src/app/shared/modules/diagram/diagram.component.html
+++ b/src/app/shared/modules/diagram/diagram.component.html
@@ -2,8 +2,8 @@
   <div class="title">
     <div class="current-year">Год: <span>{{ showedYear }}</span></div>
     <div class="chart-year-btns">
-      <button class="prev" *ngIf="showedYear >=2020" [disabled]="showedYear === 2020" (click)="prevYear()">{{ showedYear -1  }} год</button>
-      <button class="next" *ngIf="showedYear >= currentYear" [disabled]="showedYear === currentYear" (click)="nextYear()">{{ showedYear + 1 }} год</button>
+      <button class="prev" *ngIf="showedYear >2017" [disabled]="showedYear === 2018" (click)="prevYear()">{{ showedYear -1  }} год</button>
+      <button class="next" *ngIf="showedYear < currentYear" [disabled]="showedYear === currentYear" (click)="nextYear()">{{ showedYear + 1 }} год</button>
     </div>
   </div>
   <div class="chart">
@@ -25,8 +25,8 @@
           <span></span>
         </div>
         <div class="chart-items">
-          <div class="chart-item" *ngFor="let line of yearsCash" [style.height.%]="line.value / maxInput*100" >
-            <span>{{ line.value }}</span>
+          <div class="chart-item" *ngFor="let line of yearsCash" [@yearChange]="{value: state, params: { heightValue: line.value / maxInput*100 }}" >
+            <span>{{ line }}</span>
           </div>
         </div>
       </div>
