--- a/src/app/chat/components/collocutors-list/collocutors-list.component.html
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.html
@@ -15,7 +15,7 @@
     <div class="collocutors-list" [ngClass]="{ projects: chatType === 'projects' }">
       <div class="collocutor" *ngFor="let collocutor of collocutors, let i=index" (click)="openChat(collocutor)" [ngClass]="{'unread': userId === +collocutor.unread}">
         <span *ngIf="chatType == 'projects'" class="status"></span>
-        <p class="date" *ngIf="collocutor.message.length !== 0" >{{ collocutor.message[0].dateTime | dateFormatPipe }}</p>
+        <p class="date" *ngIf="collocutor.message.length !== 0" >{{ collocutor.message[0].dateTime | dateFormatPipe: 'dd.MM HH:mm' }}</p>
         <div class="message-preview">
           <div class="photo">
             <img [src]="collocutor.collocutorAva" alt="collocutor-photo" />
