--- a/src/app/chat/components/chat-component/chat-component.html
+++ b/src/app/chat/components/chat-component/chat-component.html
@@ -2,16 +2,19 @@
   <section class="collocutors">
     <app-collocutors-list [chatType]="chatType" (currentRoom)="getCurrentRoom($event)"></app-collocutors-list>
   </section>
-  <section class="messager" *ngIf="collocutorData" >
-    <app-messager *ngIf="collocutorData" [collocutorData]="collocutorData" [(isFileLoaderVisible)]="isFileLoaderVisible"></app-messager>
+  <section class="messager" *ngIf="collocutorData">
+    <app-messager *ngIf="collocutorData" [collocutorData]="collocutorData"
+      [(isFileLoaderVisible)]="isFileLoaderVisible"></app-messager>
+    <!-- <app-project-breef-filling></app-project-breef-filling> -->
   </section>
-  <section class="collocutors-tools" >
+  <section class="collocutors-tools">
     <app-messager-tools *ngIf="chatType === 'projects'"></app-messager-tools>
-    <app-collocutor-information *ngIf="chatType === 'classic' && collocutorData" [collocutorData]="collocutorData"></app-collocutor-information>
+    <app-collocutor-information *ngIf="chatType === 'classic' && collocutorData" [collocutorData]="collocutorData">
+    </app-collocutor-information>
   </section>
   <section class="file-loader" *ngIf="isFileLoaderVisible && collocutorData">
     <app-upload-file [(isFileLoaderVisible)]="isFileLoaderVisible" [collocutorData]="collocutorData"></app-upload-file>
   </section>
+
+
 </section>
-
-
