--- a/src/app/chat/components/message-list/message-list.component.html
+++ b/src/app/chat/components/message-list/message-list.component.html
@@ -3,10 +3,13 @@
   <div class="message-list" id="messages-wrap" #messagesWrap (scroll)="onScroll($event)">
     <!-- <div  #messagesHeight > -->
     <div *ngFor="let message of messagesList, let i = index">
-      <div class="message" [ngClass]="{ 'autor': message.author === userId}">
+      <div class="message" [ngClass]="{ 'autor': message.author === userId, 'message-anchor': i === 0 || messagesList[i].author !== messagesList[i-1].author}">
         <div class="photo">
-          <img *ngIf="message.author === userId" [src]="userAvatar" alt="avatar">
-          <img *ngIf="message.author !== userId" [src]="message.authorAva" alt="avatar">
+          <ng-container *ngIf="i === 0 || i== messagesList.length-1 || messagesList[i].author !== messagesList[i+1].author">
+            <img *ngIf="message.author === userId" [src]="userAvatar" alt="avatar">
+            <img *ngIf="message.author !== userId" [src]="message.authorAva" alt="avatar">
+          </ng-container>
+
         </div>
         <div class="text" *ngIf="message.type === 'string'">
           {{message.message}}
@@ -21,7 +24,7 @@
           </div>
         </div>
         <div class="message-control" *ngIf="false"></div>
-        <span class="time">{{ message.dateTime | dateFormatPipe }}</span>
+        <span class="time">{{ message.dateTime | dateFormatPipe: 'dd.MM HH:mm' }}</span>
       </div>
     </div>
     <div class="message typing" *ngIf="typing && typingUser === +userId">
