--- a/src/app/shared/modules/diagram/diagram.component.scss
+++ b/src/app/shared/modules/diagram/diagram.component.scss
@@ -45,7 +45,7 @@
       outline: none;
       cursor: pointer;
       &:first-of-type {
-        &+div {
+        & + div {
           margin-left: 40px;
         }
       }
@@ -121,7 +121,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-
+    // overflow: hidden;
     .charts-data {
       width: 100%;
       height: 100%;
@@ -183,53 +183,78 @@
         align-items: flex-end;
         justify-content: space-between;
         padding-left: 10px;
+        padding-right: 10px;
+        // max-width: 710px;
+        // overflow: hidden;
       }
 
-      .chart-item {
-        width: 10px;
-        margin: 0 21px;
-        background: #4285f4;
-        border-radius: 100px 100px 0px 0px;
-        position: relative;
-        cursor: pointer;
-        height: 0;
+      .chart-mounth {
+        // width: 10px;
+        // margin: 0 21px;
+        // background: #4285f4;
+        // border-radius: 100px 100px 0px 0px;
+        // position: relative;
+        // cursor: pointer;
+        // height: 0;
         // transition: height 0.5s ease-in-out;
-
-        span {
-          position: absolute;
-          display: block;
-          box-sizing: border-box;
-          border-radius: 4px;
-          padding: 7px;
-          font-family: Source Sans Pro, sans-serif;
-          font-style: normal;
-          font-weight: bold;
-          font-size: 16px;
-          line-height: 20px;
-          text-align: center;
-          color: #ffffff;
-          background: #4285f4;
-          top: -44px;
-          left: 50%;
-          transform: translateX(-50%);
-          opacity: 0;
-          transition: opacity 0.3s ease-in-out;
-
-          &::before {
-            content: "";
-            position: absolute;
-            width: 9px;
-            height: 9px;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+        position: relative;
+        margin: 0 10px;
+        .chart-item {
+          width: 6px;
+          border-radius: 100px 100px 0px 0px;
+          position: relative;
+          &.incoms {
             background: #4285f4;
-            bottom: -4px;
-            left: 50%;
-            transform: translateX(-50%) rotate(45deg);
           }
-        }
-
-        &:hover {
+          &.outcomes {
+            background: #ffa4ae;
+            span {
+              background: #ffa4ae;
+              &:before {
+                background: #ffa4ae;
+              }
+            }
+          }
           span {
-            opacity: 1;
+            position: absolute;
+            display: block;
+            box-sizing: border-box;
+            border-radius: 4px;
+            padding: 7px;
+            font-family: Source Sans Pro, sans-serif;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 16px;
+            line-height: 20px;
+            text-align: center;
+            color: #ffffff;
+            background: #4285f4;
+            top: -44px;
+            left: 50%;
+            transform: translateX(-50%);
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+            z-index: 25;
+            &::before {
+              content: "";
+              position: absolute;
+              width: 9px;
+              height: 9px;
+              background: #4285f4;
+              bottom: -4px;
+              left: 50%;
+              transform: translateX(-50%) rotate(45deg);
+            }
+          }
+
+          &:hover {
+            span {
+              opacity: 1;
+            }
           }
         }
       }
