--- a/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.scss
+++ b/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.scss
@@ -47,5 +47,8 @@
 .canvas {
   height: 245px;
   box-sizing: border-box;
-  position: relative;
+  // canvas {
+  //   width: 1045px;
+  //   height: 245px;
+  // }
 }
