Revert "canvas size fixed"
This reverts commit b5a43b71e3d943b44ff33b8cc0fefa1290871cf0.

--- a/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.scss
+++ b/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.scss
@@ -47,8 +47,5 @@
 .canvas {
   height: 245px;
   box-sizing: border-box;
-  // canvas {
-  //   width: 1045px;
-  //   height: 245px;
-  // }
+  position: relative;
 }
