--- a/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.html
+++ b/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.html
@@ -1,6 +1,16 @@
 <div class="tools-bar">
   <div class="items">
-    <div>финансовая статистика</div>
+    <div>
+      <h5>финансовая статистика</h5>
+      <div class="chart-type">
+        <div class="cerrent" (click)="openTypesList()">год</div>
+        <ul class="list" [ngClass]="{ show: listOpen && listOpen === true, hide: !listOpen && listOpen === false }">
+          <li>год</li>
+          <li>месяц</li>
+          <li>день</li>
+        </ul>
+      </div>
+    </div>
     <div>декабрь декабрь декабрь</div>
   </div>
 </div>
@@ -8,12 +18,8 @@
   <div class="chart">
     <h6>2019 год</h6>
     <div class="canvas" style="display: block;">
-      <!-- <canvas id="adminChart" height='245px' baseChart #adminChart [chartType]="chartType" [datasets]="chartData"
-        [colors]="chartColors"></canvas> -->
-
-      <canvas baseChart [datasets]="lineChartData" width= '1045px'
-    height= '245px' [labels]="lineChartLabels" [options]="lineChartOptions"
-        [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType"
+      <canvas baseChart [datasets]="lineChartData" width='1045px' height='245px' [labels]="lineChartLabels"
+        [options]="lineChartOptions" [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType"
         [plugins]="lineChartPlugins"></canvas>
     </div>
   </div>
