--- a/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.scss
+++ b/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.scss
@@ -14,6 +14,70 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  height: 100%;
+  h5 {
+    margin: 0;
+  }
+  & > div {
+    display: flex;
+    align-items: center;
+    h5 {
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 23px;
+      font-variant: small-caps;
+      text-transform: uppercase;
+      color: #323c47;
+    }
+    .chart-type {
+      position: relative;
+      margin-left: 50px;
+    }
+    .cerrent {
+      width: 74px;
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 20px;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      font-variant: small-caps;
+      color: #3c7eea;
+      cursor: pointer;
+      // margin-left: 36px;
+      position: relative;
+      &:after {
+        position: absolute;
+        content: "";
+        width: 5px;
+        height: 5px;
+        border-bottom: 2px solid #3c7eea;
+        border-left: 2px solid #3c7eea;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%) rotate(-45deg);
+      }
+    }
+    .list {
+      // display: none;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      background: #fff;
+      position: absolute;
+      width: 100%;
+      li {
+        list-style: none;
+        cursor: pointer;
+      }
+    }
+  }
 }
 .wrapper {
   width: 100%;
@@ -23,7 +87,7 @@
 }
 .chart {
   padding-left: 31px;
-  border: 1px solid red;
+  // border: 1px solid red;
   display: flex;
   flex-direction: column;
   h6 {
@@ -36,6 +100,7 @@
     text-transform: uppercase;
     color: #323c47;
     margin: 20px 0 16px;
+    // color: rgb(60, 126, 234);
   }
 }
 
@@ -43,6 +108,9 @@
   width: 19%;
   margin-right: 56px;
   border: 1px solid red;
+  .list {
+    display: none;
+  }
 }
 .canvas {
   height: 245px;
