--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.html
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.html
@@ -28,7 +28,7 @@
             </ng-container>
           </ul>
         </div>
-        <div class="btn-order-service">
+        <div class="btn-order-service" (click)="orderService(package)">
           Заказать услугу <span>(за {{ offerData[package].price }} ₴)</span>
         </div>
       </div>
