--- a/src/app/chat/components/collocutors-list/collocutors-list.component.html
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.html
@@ -1,19 +1,21 @@
-<div class="wrapper" *ngIf="collocutors && chatType" [ngClass]="{ projects: chatType === 'projects' }">
+<div class="wrapper" *ngIf="collocutors && chatType" [ngClass]="{ projects: chatType === 'work' }">
   <section class="line">
     Все сообщения <span>({{ collocutors.length }})</span>
   </section>
   <section class="collocutors-wrap">
-    <div class="collocutors-serch" *ngIf="chatType !== 'projects'">
+    <div class="collocutors-serch" *ngIf="chatType !== 'work'">
       <div class="search">
         <input type="text" name="" id="" placeholder="Найти">
       </div>
 
     </div>
-    <app-projects-filter *ngIf="chatType == 'projects'"></app-projects-filter>
-    <div class="collocutors-list" [ngClass]="{ projects: chatType === 'projects' }">
-      <div class="collocutor" *ngFor="let collocutor of collocutors, let i=index" (click)="openChat(collocutor)" [ngClass]="{'unread': userId === +collocutor.unread}">
-        <span *ngIf="chatType == 'projects'" class="status"></span>
-        <p class="date" *ngIf="collocutor.message.length !== 0" >{{ collocutor.message[0].dateTime | dateFormatPipe: 'dd.MM HH:mm' }}</p>
+    <app-projects-filter *ngIf="chatType == 'work'"></app-projects-filter>
+    <div class="collocutors-list" [ngClass]="{ projects: chatType === 'work' }">
+      <div class="collocutor" *ngFor="let collocutor of collocutors, let i=index" (click)="openChat(collocutor)"
+        [ngClass]="{'unread': userId === +collocutor.unread}">
+        <span *ngIf="chatType == 'work'" class="status"></span>
+        <p class="date" *ngIf="collocutor.message.length !== 0">
+          {{ collocutor.message[0].dateTime | dateFormatPipe: 'dd.MM HH:mm' }}</p>
         <div class="message-preview">
           <div class="photo">
             <img [src]="collocutor.collocutorAva" alt="collocutor-photo" />
@@ -21,11 +23,12 @@
           </div>
           <div class="message-information">
             <p class="collocutor-name">{{ collocutor.collocutorName }} {{ collocutor.collocutorSurname }} </p>
-            <p class="collocutor-message" *ngIf="collocutors[i].message.length !== 0" >
+            <p class="collocutor-message" *ngIf="collocutors[i].message.length !== 0 && chatType !== 'work'">
               <span *ngIf="userId == collocutor.message[0].author">Вы: </span>
-             <span *ngIf="collocutor.message[0].type === 'string'">{{ collocutor.message[0].message }}</span>
-             <span *ngIf="collocutor.message[0].type === 'file'">Файл</span>
+              <span *ngIf="collocutor.message[0].type === 'string'">{{ collocutor.message[0].message }}</span>
+              <span *ngIf="collocutor.message[0].type === 'file'">Файл</span>
             </p>
+            <p *ngIf="chatType == 'work'"> {{ collocutor.offers_title }}</p>
           </div>
         </div>
       </div>
