--- a/src/app/dashboard-page/dashboard-pages/finace-page/finace-page.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/finace-page.component.html
@@ -1,4 +1,4 @@
 <div class="wrapper">
-  <app-user-finances *ngIf="2===1"></app-user-finances>
-  <app-admin-finances></app-admin-finances>
+  <app-user-finances></app-user-finances>
+  <!-- <app-admin-finances></app-admin-finances> -->
 </div>
